--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,6 +10,10 @@ jobs:
   build-deploy:
     name: Build and Deploy Cars API
     runs-on: ubuntu-latest
+    env:
+      DB_URL: jdbc:postgresql://localhost:5432/github-actions
+      DB_USERNAME: postgres
+      DB_PASSWORD: postgres
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
