--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,10 +10,6 @@ jobs:
   build-deploy:
     name: Build and Deploy Cars API
     runs-on: ubuntu-latest
-    env:
-      DB_URL: jdbc:postgresql://localhost:5432/github-actions
-      DB_USERNAME: postgres
-      DB_PASSWORD: postgres
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -25,7 +21,7 @@ jobs:
           java-version: 17
 
       - name: Unit Tests
-        run: mvn -B test --file pom.xml
+        run: mvn clean package
 
       - name: Build the application
         run:
