github actions pipeline

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,6 +20,11 @@ jobs:
           distribution: 'corretto'
           java-version: 17
 
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v4.4
+        with:
+          maven-version: 3.8.2
+
       - name: Unit Tests
         run: mvn clean package
 
