--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-deploy:
     name: Build and Deploy Cars API
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -19,6 +19,14 @@ jobs:
         with:
           distribution: 'corretto'
           java-version: 17
+
+      - name: Database config
+      - uses: harmon758/postgresql-action@v1
+        with:
+          postgresql version: '11'
+          postgresql db: github-actions
+          postgresql user: postgres
+          postgresql password: postgres
 
       - name: Unit Tests
         run: mvn -B test --file pom.xml
