--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,6 +10,19 @@ jobs:
   build-deploy:
     name: Build and Deploy Cars API
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          env:
+            POSTGRES_PASSWORD: postgres
+            POSTGRES_USER: postgres
+            POSTGRES_DB: github-actions
+          options: >-
+            --health-cmd pg_isready
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -19,14 +32,6 @@ jobs:
         with:
           distribution: 'corretto'
           java-version: 17
-
-      - name: Database config
-      - uses: harmon758/postgresql-action@v1
-        with:
-          postgresql version: '11'
-          postgresql db: github-actions
-          postgresql user: postgres
-          postgresql password: postgres
 
       - name: Unit Tests
         run: mvn -B test --file pom.xml
